--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 4.5rem 1rem 1rem 1rem;
+    position: relative;
+    min-height: calc(100vh - 7.5rem);
+    flex-flow: row wrap;
+    align-content: center;
+}
+
 main .card{
     display: inline-flex;
     flex-direction: column;
@@ -18,9 +30,5 @@ main .card:hover{
 }
 
 main .card img{
-    height: 10rem;
-}
-
-main .card img.g{
     height: 15rem;
 }
